# elfix

./: .gitignore  .travis.yml  ChangeLog  Makefile.in  README.md  TODO  autogen.sh  config.h.in  configure  configure.ac
.github/workflows/: build-test-ci.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: Makefile.in  paxctl-ng.1  revdep-pax.1  revdep-pax.pod
misc/: bundle.sh
misc/elf-abi/: .gitignore  Makefile  elf-abi.c
misc/fix-gnustack/: configure.ac
misc/fix-gnustack/doc/: fix-gnustack.1
misc/fix-gnustack/tests/: Makefile.am  gnustacktest.sh
misc/install-xattr/: checkcopyattrs.sh  install-xattr.c
poc/: Makefile.in
refs/heads/: master
scripts/: Makefile.in  paxmark.sh  paxmodule.c  revdep-pax
src/: Makefile.in  paxctl-ng.c
tests/: Makefile.in
tests/gnustack/: Makefile.in
tests/paxmodule/: Makefile.in
tests/pxtpax/: Makefile.in
tests/revdeppaxtest/: Makefile.in
